# Condor

./: .gitignore  .travis.yml  CMakeLists.txt  CobraLang.sublime-project  CobraLang.sublime-workspace  Condor.sublime-project  Condor.sublime-workspace  Dockerfile  LICENSE  LICENSE.md  Makefile  Procfile  README.md  Stone.sublime-project  app.json  composer.json  condor.cbp  configure  configure.py  log.txt  readme.md  test.txt
.github/workflows/: ccpp.yml
beta/: Makefile
beta/include/: Cobra.h
beta/src/: api.cc  api.d  main.cc  main.d
beta/src/cobra/: clock.cc  flags.cc  flags.h
beta/test/: main.cc  shell.cc  test.cb
beta/test/tests/: xml.cb
c/: CMakeLists.txt  main.c  mem
c/src/utils/: assert.h
documentation/: Design Specs.docx  Guidelines.docx  doxygen.config  import.md  ~$idelines.docx
documentation/The Perfect Programming Language/: functions.cb  objects.cb
documentation/doxygen/html/: _cobra_8h_source.html  allocate_8h_source.html  annotated.html  api_8h_source.html  array_8h_source.html  assert_8h_source.html  ast_8h_source.html  check_8h_source.html  class_cobra_1_1_context-members.html  class_cobra_1_1_context.html  class_cobra_1_1_handle-members.html  class_cobra_1_1_handle.html  class_cobra_1_1_isolate-members.html  class_cobra_1_1_isolate.html  class_cobra_1_1_script-members.html  class_cobra_1_1_script.html  class_cobra_1_1_string-members.html  class_cobra_1_1_string.html  class_cobra_1_1internal_1_1_a_s_t_array-members.html  class_cobra_1_1internal_1_1_a_s_t_array.html  class_cobra_1_1internal_1_1_a_s_t_array_member_expr-members.html  class_cobra_1_1internal_1_1_a_s_t_array_member_expr.html  class_cobra_1_1internal_1_1_a_s_t_binary_expr-members.html  class_cobra_1_1internal_1_1_a_s_t_binary_expr.html  class_cobra_1_1internal_1_1_a_s_t_block-members.html  class_cobra_1_1internal_1_1_a_s_t_block.html  class_cobra_1_1internal_1_1_a_s_t_boolean-members.html  class_cobra_1_1internal_1_1_a_s_t_boolean.html  class_cobra_1_1internal_1_1_a_s_t_cast_expr-members.html  class_cobra_1_1internal_1_1_a_s_t_cast_expr.html  class_cobra_1_1internal_1_1_a_s_t_char-members.html  class_cobra_1_1internal_1_1_a_s_t_char.html  class_cobra_1_1internal_1_1_a_s_t_double-members.html  class_cobra_1_1internal_1_1_a_s_t_double.html  (+145 more)
documentation/types/: array.md  export.md  functions.md  import.md  include.md
example/: array.cb
experimental/c/: CMakeLists.txt  README.md  compiled.cd  compiled.json  init  main.c  mem.dump
experimental/c/include/: Condor.h
experimental/c/src/condor/ast/: ast.c  ast.h  astlist.c  astlist.h  scope.c  scope.h
experimental/c/src/condor/lexer/: lexer.c  lexer.h
experimental/c/src/condor/mem/: allocate.c  allocate.h
experimental/c/src/condor/number/: number.c  number.h
experimental/c/src/condor/runner/: runner-math.c  runner-math.h  runner-types.h  runner.c  runner.h
experimental/c/src/condor/semantic/: semantic.c  semantic.h  typechecker.c  typechecker.h
experimental/c/src/condor/syntax/: syntax.c  syntax.h
experimental/c/src/condor/token/: token.c  token.h
experimental/c/src/utils/: assert.h  clock.c  clock.h  debug.h  types.h
experimental/c/src/utils/file/: file.c  file.h
experimental/c/src/utils/string/: string.c  string.h
include/: Cobra.h  Condor.h  Stone.h  readme.md
js/: parser.js
libs/: app.cb  array.cb  assert.cb  clock.cb  colors.cb  console.cb  date.cb  exception.cb  fs.cb  integer.cb  math.cb  memory.cb  path.cb  string.cb  thread.cb  types.cb
old/: README.md  configure
old/src/: api.cc
old/test/: main.cc  shell.cc
src/: api.cc  api.d  api.h  ast.cc  ast.h  error.cc  error.h  expression.cc  expression.h  function.cc  function.h  lexer.cc  lexer.h  limits.h  main.cc  parser.cc  parser.h  tokens.cc  tokens.h  var.cc  var.h
src(old)/: ast.h  context.cc  context.h  import.cc  import.h  include.cc  include.h  lexer.cc  lexer.h  parser.cc  parser.h  tokens.h
src/cobra/: assert.cc  assert.h  clock.cc  clock.d  clock.h  flags.cc  flags.d  flags.h  global.h  globals.h  shell.h
src/condor/: README.md  assert.cc  assert.h  clock.cc  clock.h  flags.cc  flags.h  global.h  shell.h
src/fs/: fs.cc  fs.h
src/math/: math.cb
src/old/: error.cc  error.h  executer.cc  executer.h  lexer.h  parser.cc  parser.h
src/platform/: windows.h
src/stone/: assert.cc  assert.h  clock.cc  clock.h  flags.cc  flags.h  global.h  shell.h
test/: automate.cc  benchmark.cb  bug.cb  main.cc  math.cb  shell.cc  test.cb  test2.cb  test3.cb  test4.cb
test/sub/: test.cb  test2.cb
test/tests/: console.cb  func.cb  int.cb  loop.cb  math.cb  object.cb  print.cb  simple.h  string.cb  template.cb  template.go  var.cb  xml.cb
utils/: mem.py  version.py
web/: index.php
web/stylesheets/: main.css
web/views/: header.html  index.twig  layout.html  nav.html
xcode/CobraLang/: api.cc  api.h
(+710 files in other folders)
